try to fix incidents on ios

--- a/src/app/content/events/components/event-list-part/event-list-part.component.scss
+++ b/src/app/content/events/components/event-list-part/event-list-part.component.scss
@@ -1,5 +1,9 @@
 @import "../../../../../colors";
 
+sr-event-incident {
+    display: block;
+}
+
 .timeline {
     position: absolute;
     border-left: solid 4px $color-hr-border;
